Field Hunt/src/objects/Deposit__c.object
<CustomObject>
    <description>Holds deposit information putting together all payments that hit the bank as one deposit or refund.</description>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether the deposit has been verified and finalized. The deposit should then not be changed anymore. Checks can then also be taken to the bank.</description>
        <inlineHelpText>Check when the deposit has been verified and finalized</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <description>This is the total amount of the Deposit, as a total of all Allocations entered. This amount is manually entered, and should match the System Total, as a way to confirm that all the payments are entered correctly.</description>
        <inlineHelpText>Enter the total amount of the Deposit, as a total of all Allocations entered. This amount is manually entered, and should match the System Total, as a way to confirm that all the payments are entered correctly.</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <description>Date of the deposit.</description>
        <inlineHelpText>Enter the date of the deposit.</inlineHelpText>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <description>Used to force workflows and processes to fire.</description>
        <inlineHelpText>Used to force workflows and processes to fire.</inlineHelpText>
        <label>Force Update</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Great_Plains_Export_Date__c</fullName>
        <description>The date the deposit was sent to Great Plains.</description>
        <inlineHelpText>Select the date the deposit was sent to Great Plains.</inlineHelpText>
        <label>Great Plains Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Payment_ID__c</fullName>
        <description>In the case that the deposit was copied from the old Parent Payment object, this is the ID of the old Parent Payment.</description>
        <externalId>true</externalId>
        <inlineHelpText>In the case that the deposit was copied from the old Parent Payment object, this is the ID of the old Parent Payment.</inlineHelpText>
        <label>Parent Payment ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>This is the source of the funds.</description>
        <inlineHelpText>Select the deposit source.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check/Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>Check/Cash Refund</fullName>
                </value>
                <value>
                    <fullName>Credit Card Authorize.net Deposit</fullName>
                </value>
                <value>
                    <fullName>Credit Card Paypal Deposit</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_Great_Plains__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows that the deposit has been sent to Great Plains.</description>
        <inlineHelpText>Check when the deposit has been sent to Great Plains.</inlineHelpText>
        <label>Sent to Great Plains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <formula>If( System_Total__c  &lt;&gt; Deposit_Amount__c , IMAGE(&quot;img/msg_icons/error32.png&quot;, &quot;The numbers don&apos;t add up.&quot;), IMAGE(&quot;img/msg_icons/confirm32.png&quot;, &quot;It all adds up!&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Total__c</fullName>
        <description>This is the system total, calculated as the sum of all payments related to this deposit. Updates every 15 minutes.</description>
        <inlineHelpText>This is the system total, calculated as the sum of all payments related to this deposit. Updates every 15 minutes.</inlineHelpText>
        <label>System Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deposit/Refund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Deposit_Amount__c</columns>
        <columns>Closed__c</columns>
        <columns>Sent_to_Great_Plains__c</columns>
        <columns>Great_Plains_Export_Date__c</columns>
        <columns>Force_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits and Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>